# BudStudio

./: .gitignore  README.md  SOUL.md  USER.md  desktop-app-plan.md  desktop-prototype-plan.md
.github/workflows/: desktop-release.yml
backend/: Dockerfile
backend/alembic/versions/: 37b954ba09e6_redesign_inbox_conversations.py  559413e9983c_add_agent_inbox_message.py  5ea281e39ac5_rename_canvas_to_artifact.py  68b5824bae0c_add_bud_agent_tables.py  76491d90da5b_merge_heads.py  a1b2c3d4e5f6_add_web_search_provider_table.py  b3c4d5e6f7a8_add_agent_workspace_file.py  b7bbdbc8cf44_add_canvas_data_to_chat_message.py  b7c8d9e0f1a2_add_tool_call_id_step_number_to_agent_message.py  c4d5e6f7a8b9_add_agent_session_compaction_fields.py  c8d9e0f1a2b3_drop_is_heartbeat_from_agent_cron_job.py  d7e8f9a0b1c2_add_agent_cron_tables.py  d9e0f1a2b3c4_add_goal_to_inbox_conversation.py  (+4 more)
backend/onyx/: main.py  setup.py
backend/onyx/db/: llm.py  (+10 more)
backend/requirements/: default.txt
desktop/: .env.example  .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.json  tsconfig.preload.json
desktop/resources/: README.md
desktop/scripts/: dev.sh  dev.ts  fix-standalone-name.js  prepare-nextjs.sh
desktop/src/: index.html  setup.html
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  main.rs  next_server.rs  titlebar.rs
web/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json
web/src/: middleware.ts
(+325 files in other folders)
